--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div>
           <ul class="nav-links">
             <li><a href="#about">Sobre Mí</a></li>
-            <li><a href="#experience">Experiencias</a></li>
+            <li><a href="#experience">Habilidades</a></li>
             <li><a href="#projects">Proyectos</a></li>
             <li><a href="#contact">Cantactame</a></li>
           </ul>
@@ -36,7 +36,7 @@
           </div>
           <div class="menu-links">
             <li><a href="#about" onclick="toogleMenu()">Sobre Mí</a></li>
-            <li><a href="#experience" onclick="toogleMenu()">Experiencias</a></li>
+            <li><a href="#experience" onclick="toogleMenu()">Habilidades</a></li>
             <li><a href="#projects" onclick="toogleMenu()">Proyectos</a></li>
             <li><a href="#contact" onclick="toogleMenu()">Cantactame</a></li>
           </div>
