--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
           <div class="nav-links-container">
             <ul class="nav-links">
               <li><a href="#about">Sobre Mí</a></li>
-              <li><a href="#experience">Experiencias</a></li>
+              <li><a href="#experience">Habilidades</a></li>
               <li><a href="#projects">Proyectos</a></li>
               <li><a href="#contact">Cantactame</a></li>
             </ul>
