README modified and HTML corrected

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     <div class="wrapper">
       <nav id="desktop-nav">
         <div class="logo">
-          <svg class="logo-module--icon--13WJl" xmlns="https://www.w3.org/2000/svg" viewBox="0 0 52 52"><g class="logo-module--circle-holder--1Ygxy"><path class="logo-module--circle--1sr7A" d="M5.4 26c0-11.4 9.2-20.6 20.6-20.6s20.6 9.2 20.6 20.6c0 11.4-9.2 20.6-20.6 20.6s-20.6-9.2-20.6-20.6zm-5.4 0c0 14.4 11.6 26 26 26s26-11.6 26-26-11.6-26-26-26-26 11.6-26 26z"></path></g><path class="logo-module--i--FY9go" d="M15 22h9v16h-9v-16z"></path><path class="logo-module--l--3c_ha" d="M28 14h9v24h-9v-24z"></path></svg>
+          <svg class="logo-module--icon--13WJl" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52"><g class="logo-module--circle-holder--1Ygxy"><path class="logo-module--circle--1sr7A" d="M5.4 26c0-11.4 9.2-20.6 20.6-20.6s20.6 9.2 20.6 20.6c0 11.4-9.2 20.6-20.6 20.6s-20.6-9.2-20.6-20.6zm-5.4 0c0 14.4 11.6 26 26 26s26-11.6 26-26-11.6-26-26-26-26 11.6-26 26z"></path></g><path class="logo-module--i--FY9go" d="M15 22h9v16h-9v-16z"></path><path class="logo-module--l--3c_ha" d="M28 14h9v24h-9v-24z"></path></svg>
         </div>
         <div>
           <ul class="nav-links">
             <li><a href="#about">Sobre Mí</a></li>
             <li><a href="#experience">Habilidades</a></li>
             <li><a href="#projects">Proyectos</a></li>
-            <li><a href="#contact">Cantactame</a></li>
+            <li><a href="#contact">Cantáctame</a></li>
           </ul>
         </div>
       </nav>
 
       <nav id="hamburguer-nav">
         <div class="logo">
-          <svg class="logo-module--icon--13WJl" xmlns="https://www.w3.org/2000/svg" viewBox="0 0 52 52"><g class="logo-module--circle-holder--1Ygxy"><path class="logo-module--circle--1sr7A" d="M5.4 26c0-11.4 9.2-20.6 20.6-20.6s20.6 9.2 20.6 20.6c0 11.4-9.2 20.6-20.6 20.6s-20.6-9.2-20.6-20.6zm-5.4 0c0 14.4 11.6 26 26 26s26-11.6 26-26-11.6-26-26-26-26 11.6-26 26z"></path></g><path class="logo-module--i--FY9go" d="M15 22h9v16h-9v-16z"></path><path class="logo-module--l--3c_ha" d="M28 14h9v24h-9v-24z"></path></svg>
+          <svg class="logo-module--icon--13WJl" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52"><g class="logo-module--circle-holder--1Ygxy"><path class="logo-module--circle--1sr7A" d="M5.4 26c0-11.4 9.2-20.6 20.6-20.6s20.6 9.2 20.6 20.6c0 11.4-9.2 20.6-20.6 20.6s-20.6-9.2-20.6-20.6zm-5.4 0c0 14.4 11.6 26 26 26s26-11.6 26-26-11.6-26-26-26-26 11.6-26 26z"></path></g><path class="logo-module--i--FY9go" d="M15 22h9v16h-9v-16z"></path><path class="logo-module--l--3c_ha" d="M28 14h9v24h-9v-24z"></path></svg>
         </div>
         <div class="hamburguer-menu">
           <div class="hamburguer-icon" onclick="toogleMenu()">
@@ -34,12 +34,12 @@
             <span></span>
             <span></span>
           </div>
-          <div class="menu-links">
+          <ul class="menu-links">
             <li><a href="#about" onclick="toogleMenu()">Sobre Mí</a></li>
             <li><a href="#experience" onclick="toogleMenu()">Habilidades</a></li>
             <li><a href="#projects" onclick="toogleMenu()">Proyectos</a></li>
-            <li><a href="#contact" onclick="toogleMenu()">Cantactame</a></li>
-          </div>
+            <li><a href="#contact" onclick="toogleMenu()">Cantáctame</a></li>
+          </ul>
         </div>
       </nav>
 
@@ -379,8 +379,8 @@
       </section>
 
       <section id="contact">
-        <p class="section__text__p1">
-          <h1 class="title">Contactame</h1>
+        <p class="section__text__p1">Para más info</p>
+          <h1 class="title">Contáctame</h1>
           <div class="contact-info-upper-container">
             <div class="contact-info-container">
               <img src="./assets/email.png" alt="icono de email" class="icon contact-icon email-icon"/>
@@ -391,7 +391,6 @@
               <p><a href="https://www.linkedin.com/in/alfredo-sanchezg/" target="_blank">LinkedIn</a></p>
             </div>
           </div>
-        </p>
       </section>
 
       <footer>
