--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                   class="project-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">Proyecto Uno</h2>
+              <h2 class="project-title">Crayola y Papel S.A</h2>
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
@@ -327,7 +327,7 @@
                   class="project-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">Proyecto Dos</h2>
+              <h2 class="project-title">Proyecto Dos</h2>
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
@@ -352,7 +352,7 @@
                   class="project-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">Proyecto Tres</h2>
+              <h2 class="project-title">Proyecto Tres</h2>
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
