improved projects section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
     <div class="wrapper">
       <nav id="desktop-nav">
         <div class="logo">
-          <svg class="logo-module--icon--13WJl" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52"><g class="logo-module--circle-holder--1Ygxy"><path class="logo-module--circle--1sr7A" d="M5.4 26c0-11.4 9.2-20.6 20.6-20.6s20.6 9.2 20.6 20.6c0 11.4-9.2 20.6-20.6 20.6s-20.6-9.2-20.6-20.6zm-5.4 0c0 14.4 11.6 26 26 26s26-11.6 26-26-11.6-26-26-26-26 11.6-26 26z"></path></g><path class="logo-module--i--FY9go" d="M15 22h9v16h-9v-16z"></path><path class="logo-module--l--3c_ha" d="M28 14h9v24h-9v-24z"></path></svg>
+          <svg
+            class="logo-module--icon--13WJl"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 52 52"
+          >
+            <g class="logo-module--circle-holder--1Ygxy">
+              <path
+                class="logo-module--circle--1sr7A"
+                d="M5.4 26c0-11.4 9.2-20.6 20.6-20.6s20.6 9.2 20.6 20.6c0 11.4-9.2 20.6-20.6 20.6s-20.6-9.2-20.6-20.6zm-5.4 0c0 14.4 11.6 26 26 26s26-11.6 26-26-11.6-26-26-26-26 11.6-26 26z"
+              ></path>
+            </g>
+            <path class="logo-module--i--FY9go" d="M15 22h9v16h-9v-16z"></path>
+            <path class="logo-module--l--3c_ha" d="M28 14h9v24h-9v-24z"></path>
+          </svg>
         </div>
         <div>
           <ul class="nav-links">
@@ -26,7 +39,20 @@
 
       <nav id="hamburguer-nav">
         <div class="logo">
-          <svg class="logo-module--icon--13WJl" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52"><g class="logo-module--circle-holder--1Ygxy"><path class="logo-module--circle--1sr7A" d="M5.4 26c0-11.4 9.2-20.6 20.6-20.6s20.6 9.2 20.6 20.6c0 11.4-9.2 20.6-20.6 20.6s-20.6-9.2-20.6-20.6zm-5.4 0c0 14.4 11.6 26 26 26s26-11.6 26-26-11.6-26-26-26-26 11.6-26 26z"></path></g><path class="logo-module--i--FY9go" d="M15 22h9v16h-9v-16z"></path><path class="logo-module--l--3c_ha" d="M28 14h9v24h-9v-24z"></path></svg>
+          <svg
+            class="logo-module--icon--13WJl"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 52 52"
+          >
+            <g class="logo-module--circle-holder--1Ygxy">
+              <path
+                class="logo-module--circle--1sr7A"
+                d="M5.4 26c0-11.4 9.2-20.6 20.6-20.6s20.6 9.2 20.6 20.6c0 11.4-9.2 20.6-20.6 20.6s-20.6-9.2-20.6-20.6zm-5.4 0c0 14.4 11.6 26 26 26s26-11.6 26-26-11.6-26-26-26-26 11.6-26 26z"
+              ></path>
+            </g>
+            <path class="logo-module--i--FY9go" d="M15 22h9v16h-9v-16z"></path>
+            <path class="logo-module--l--3c_ha" d="M28 14h9v24h-9v-24z"></path>
+          </svg>
         </div>
         <div class="hamburguer-menu">
           <div class="hamburguer-icon" onclick="toogleMenu()">
@@ -36,7 +62,9 @@
           </div>
           <ul class="menu-links">
             <li><a href="#about" onclick="toogleMenu()">Sobre Mí</a></li>
-            <li><a href="#experience" onclick="toogleMenu()">Habilidades</a></li>
+            <li>
+              <a href="#experience" onclick="toogleMenu()">Habilidades</a>
+            </li>
             <li><a href="#projects" onclick="toogleMenu()">Proyectos</a></li>
             <li><a href="#contact" onclick="toogleMenu()">Cantáctame</a></li>
           </ul>
@@ -61,7 +89,10 @@
             >
               Descargar CV
             </button>
-            <button class="btn btn-color-1" onclick="location.href='./#contact'">
+            <button
+              class="btn btn-color-1"
+              onclick="location.href='./#contact'"
+            >
               Contactame
             </button>
           </div>
@@ -119,7 +150,13 @@
             </div>
             <div class="text-container">
               <p>
-                Desde 2018, he trabajado como desarrollador de software especializado en soluciones backend, utilizando tecnologías como GeneXus, Node.js, y PostgreSQL, entre otras. He adquirido experiencia en empresas de diversos tamaños, participando en el desarrollo de soluciones backend complejas y escalables, con un enfoque en la integración de sistemas mediante API's REST para optimizar procesos empresariales.
+                Desde 2018, he trabajado como desarrollador de software
+                especializado en soluciones backend, utilizando tecnologías como
+                GeneXus, Node.js, y PostgreSQL, entre otras. He adquirido
+                experiencia en empresas de diversos tamaños, participando en el
+                desarrollo de soluciones backend complejas y escalables, con un
+                enfoque en la integración de sistemas mediante API's REST para
+                optimizar procesos empresariales.
               </p>
             </div>
           </div>
@@ -292,83 +329,91 @@
       <section id="projects">
         <p class="section__text__p1">Navega mis recientes</p>
         <h1 class="title">Proyectos</h1>
-        <div class="experience-details-container">
-          <div class="about-containers">
-            <div class="details-container color-container">
-              <div class="article-container">
+        <div class="projects-details-container">
+          <article class="project">
+            <div class="project-left">
+              <div class="project-img-container">
                 <img
-                  src="./assets/project-1.png"
-                  alt="proyecto 1"
+                  src="./assets/project-crayola.png"
+                  alt="Imagen del proyecto 1"
                   class="project-img"
                 />
               </div>
-              <h2 class="project-title">Crayola y Papel S.A</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
-                >
-                  Github
-                </button>
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
-                >
-                  Ver Demo
-                </button>
+            </div>
+            <div class="project-right">
+              <h3 class="project-title">Crayola y Papel S.A</h3>
+              <div class="project-right-2">
+                <ul class="project-tools">
+                  <li class="project-tools__item">JavaScript</li>
+                  <li class="project-tools__item">PHP</li>
+                  <li class="project-tools__item">Bootstrap</li>
+                  <li class="project-tools__item">PostgreSQL</li>
+                </ul>
+                <p class="project-description">
+                  Sistema de gestión de compras, servicios y ventas optimiza los
+                  procesos clave de la empresa. Automatiza el control de
+                  inventarios. Centraliza ventas y facilita transacciones
+                  mediante múltiples métodos de pago, mejorando la visibilidad
+                  operativa y el control financiero para apoyar una toma de
+                  decisiones ágil y efectiva.
+                </p>
+                <footer>
+                  <a
+                    href="http://github.com/"
+                    class="btn btn-color-2 project-btn"
+                    >Github</a
+                  >
+                  <a
+                    href="http://github.com/"
+                    class="btn btn-color-1 project-btn"
+                    >Ver Demo</a
+                  >
+                </footer>
               </div>
             </div>
-
-            <div class="details-container color-container">
-              <div class="article-container">
+          </article>
+          <article class="project">
+            <div class="project-left">
+              <div class="project-img-container">
                 <img
-                  src="./assets/project-2.png"
-                  alt="proyecto 1"
+                  src="./assets/project-electro-1.png"
+                  alt="Imagen del proyecto 1"
                   class="project-img"
                 />
               </div>
-              <h2 class="project-title">Proyecto Dos</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
-                >
-                  Github
-                </button>
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
-                >
-                  Ver Demo
-                </button>
+            </div>
+            <div class="project-right">
+              <h3 class="project-title">Electrodomesticos S.A</h3>
+              <div class="project-right-2">
+                <ul class="project-tools">
+                  <li class="project-tools__item">JavaScript</li>
+                  <li class="project-tools__item">PHP</li>
+                  <li class="project-tools__item">Bootstrap</li>
+                  <li class="project-tools__item">PostgreSQL</li>
+                </ul>
+                <p class="project-description">
+                  Sistema de gestión de compras, ventas y tesoreria optimiza los
+                  procesos clave de la empresa. Centraliza ventas y facilita
+                  transacciones mediante múltiples métodos de pago. Gestiona
+                  flujo de caja: asignación, rendición y reposición mejorando la
+                  visibilidad operativa y el control financiero para apoyar una
+                  toma de decisiones ágil y efectiva.
+                </p>
+                <footer>
+                  <a
+                    href="http://github.com/"
+                    class="btn btn-color-2 project-btn"
+                    >Github</a
+                  >
+                  <a
+                    href="http://github.com/"
+                    class="btn btn-color-1 project-btn"
+                    >Ver Demo</a
+                  >
+                </footer>
               </div>
             </div>
-
-            <div class="details-container color-container">
-              <div class="article-container">
-                <img
-                  src="./assets/project-3.png"
-                  alt="proyecto 1"
-                  class="project-img"
-                />
-              </div>
-              <h2 class="project-title">Proyecto Tres</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
-                >
-                  Github
-                </button>
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
-                >
-                  Ver Demo
-                </button>
-              </div>
-            </div>
-          </div>
+          </article>
         </div>
         <img
           src="./assets/arrow.png"
@@ -380,20 +425,38 @@
 
       <section id="contact">
         <p class="section__text__p1">Para más info</p>
-          <h1 class="title">Contáctame</h1>
-          <div class="contact-info-upper-container">
-            <div class="contact-info-container">
-              <img src="./assets/email.png" alt="icono de email" class="icon contact-icon email-icon"/>
-              <p><a href="mailto:alfredosanchez080114@gmail.com">alfredosanchez@gmail.com</a></p>
-            </div>
-            <div class="contact-info-container">
-              <img src="./assets/linkedin.png" alt="icono de Linkedin" class="icon contact-icon"/>
-              <p><a href="https://www.linkedin.com/in/alfredo-sanchezg/" target="_blank">LinkedIn</a></p>
-            </div>
+        <h1 class="title">Contáctame</h1>
+        <div class="contact-info-upper-container">
+          <div class="contact-info-container">
+            <img
+              src="./assets/email.png"
+              alt="icono de email"
+              class="icon contact-icon email-icon"
+            />
+            <p>
+              <a href="mailto:alfredosanchez080114@gmail.com"
+                >alfredosanchez@gmail.com</a
+              >
+            </p>
           </div>
+          <div class="contact-info-container">
+            <img
+              src="./assets/linkedin.png"
+              alt="icono de Linkedin"
+              class="icon contact-icon"
+            />
+            <p>
+              <a
+                href="https://www.linkedin.com/in/alfredo-sanchezg/"
+                target="_blank"
+                >LinkedIn</a
+              >
+            </p>
+          </div>
+        </div>
       </section>
 
-      <footer>
+      <footer class="footer">
         <nav>
           <div class="nav-links-container">
             <ul class="nav-links">
