Correct img for electrodomestico project

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <div class="project-left">
               <div class="project-img-container">
                 <img
-                  src="./assets/project-electro-1.png"
+                  src="./assets/project-electro.png"
                   alt="Imagen del proyecto 1"
                   class="project-img"
                 />
