title and subtitle changed

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="section__text">
           <p class="section__text__p1">Hola, soy</p>
           <h1 class="title">Alfredo Sánchez</h1>
-          <p class="section__text__p2">Backend Developer</p>
+          <p class="section__text__p2">Software Engineer</p>
           <div class="btn-container">
             <button
               class="btn btn-color-2"
@@ -133,7 +133,7 @@
                   class="icon"
                 />
                 <h3>Experiencias</h3>
-                <p>3+ años <br />Backend Development</p>
+                <p>3+ años <br />Software Development</p>
               </div>
               <div class="details-container">
                 <img
