contactame type of corrected

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li><a href="#about">Sobre Mí</a></li>
             <li><a href="#projects">Proyectos</a></li>
             <li><a href="#experience">Habilidades</a></li>
-            <li><a href="#contact">Cantáctame</a></li>
+            <li><a href="#contact">Contáctame</a></li>
           </ul>
         </div>
       </nav>
@@ -66,7 +66,7 @@
             <li>
               <a href="#experience" onclick="toogleMenu()">Habilidades</a>
             </li>
-            <li><a href="#contact" onclick="toogleMenu()">Cantáctame</a></li>
+            <li><a href="#contact" onclick="toogleMenu()">Contáctame</a></li>
           </ul>
         </div>
       </nav>
@@ -463,7 +463,7 @@
               <li><a href="#about">Sobre Mí</a></li>
               <li><a href="#projects">Proyectos</a></li>
               <li><a href="#experience">Habilidades</a></li>
-              <li><a href="#contact">Cantactame</a></li>
+              <li><a href="#contact">Contáctame</a></li>
             </ul>
           </div>
         </nav>
