--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               class="btn btn-color-1"
               onclick="location.href='./#contact'"
             >
-              Contactame
+              Contáctame
             </button>
           </div>
           <div id="socials-container">
