PNG imgs changed by webp imgs

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <div class="project-left">
               <div class="project-img-container">
                 <img
-                  src="./assets/project-crayola.png"
+                  src="./assets/project-crayola.webp"
                   alt="Imagen del proyecto 1"
                   class="project-img"
                 />
@@ -219,7 +219,7 @@
             <div class="project-left">
               <div class="project-img-container">
                 <img
-                  src="./assets/project-electro.png"
+                  src="./assets/project-electro.webp"
                   alt="Imagen del proyecto 1"
                   class="project-img"
                 />
