dark mode done and img tronsformed in svg

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wrapper">
       <nav id="desktop-nav">
-        <div class="logo">
+        <div class="logo toggle-dark-mode">
           <svg
             class="logo-module--icon--13WJl"
             xmlns="http://www.w3.org/2000/svg"
@@ -38,7 +38,7 @@
       </nav>
 
       <nav id="hamburguer-nav">
-        <div class="logo">
+        <div class="logo toggle-dark-mode-2">
           <svg
             class="logo-module--icon--13WJl"
             xmlns="http://www.w3.org/2000/svg"
@@ -70,6 +70,8 @@
           </ul>
         </div>
       </nav>
+
+      <!-- <button id="toggle-dark-mode">Toggle Dark Mode</button> -->
 
       <section id="profile">
         <div class="section__pic-container">
@@ -132,7 +134,7 @@
                   alt="Icono de experiencias"
                   class="icon"
                 />
-                <h3>Experiencias</h3>
+                <h3 class="about-subtitle">Experiencias</h3>
                 <p>3+ años <br />Software Development</p>
               </div>
               <div class="details-container">
@@ -141,7 +143,7 @@
                   alt="Icono de educación"
                   class="icon"
                 />
-                <h3>Educación</h3>
+                <h3 class="about-subtitle">Educación</h3>
                 <p>
                   Lic. Análisis de Sistemas <br />
                   Post. Didáctica Universitaria
@@ -281,7 +283,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>HTML</h3>
+                    <h3 class="skill-title">HTML</h3>
                     <p>Experimentado</p>
                   </div>
                 </article>
@@ -292,7 +294,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>CSS</h3>
+                    <h3 class="skill-title">CSS</h3>
                     <p>Experimentado</p>
                   </div>
                 </article>
@@ -303,7 +305,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>SASS</h3>
+                    <h3 class="skill-title">SASS</h3>
                     <p>Intermedio</p>
                   </div>
                 </article>
@@ -314,7 +316,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>JavaScript</h3>
+                    <h3 class="skill-title">JavaScript</h3>
                     <p>Experimentado</p>
                   </div>
                 </article>
@@ -325,7 +327,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>TypeScript</h3>
+                    <h3 class="skill-title">TypeScript</h3>
                     <p>Básico</p>
                   </div>
                 </article>
@@ -336,7 +338,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>Material UI</h3>
+                    <h3 class="skill-title">Material UI</h3>
                     <p>Intermedio</p>
                   </div>
                 </article>
@@ -352,7 +354,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>Node JS</h3>
+                    <h3 class="skill-title">Node JS</h3>
                     <p>Experimentado</p>
                   </div>
                 </article>
@@ -363,7 +365,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>PHP</h3>
+                    <h3 class="skill-title">PHP</h3>
                     <p>Experimentado</p>
                   </div>
                 </article>
@@ -374,7 +376,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>Express JS</h3>
+                    <h3 class="skill-title">Express JS</h3>
                     <p>Experimentado</p>
                   </div>
                 </article>
@@ -385,7 +387,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>SQL</h3>
+                    <h3 class="skill-title">SQL</h3>
                     <p>Experimentado</p>
                   </div>
                 </article>
@@ -396,7 +398,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>Laravel</h3>
+                    <h3 class="skill-title">Laravel</h3>
                     <p>Intermedio</p>
                   </div>
                 </article>
@@ -407,7 +409,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>Git y Github</h3>
+                    <h3 class="skill-title">Git y Github</h3>
                     <p>Intermedio</p>
                   </div>
                 </article>
