--- a/index.html
+++ b/index.html
@@ -71,8 +71,6 @@
         </div>
       </nav>
 
-      <!-- <button id="toggle-dark-mode">Toggle Dark Mode</button> -->
-
       <section id="profile">
         <div class="section__pic-container">
           <img
@@ -100,13 +98,13 @@
           </div>
           <div id="socials-container">
             <img
-              src="./assets/linkedin.png"
+              src="./assets/linkedin.svg"
               alt="Mi perfil de Linkedin"
               class="icon"
               onclick="location.href='https://www.linkedin.com/in/alfredo-sanchezg/'"
             />
             <img
-              src="./assets/github.png"
+              src="./assets/github.svg"
               alt="Mi perfil de Github"
               class="icon"
               onclick="location.href='https://github.com/Alfredo-Sanchez'"
@@ -130,7 +128,7 @@
             <div class="about-containers">
               <div class="details-container">
                 <img
-                  src="./assets/experience.png"
+                  src="./assets/experience.svg"
                   alt="Icono de experiencias"
                   class="icon"
                 />
@@ -139,7 +137,7 @@
               </div>
               <div class="details-container">
                 <img
-                  src="./assets/education.png"
+                  src="./assets/education.svg"
                   alt="Icono de educación"
                   class="icon"
                 />
@@ -164,7 +162,7 @@
           </div>
         </div>
         <img
-          src="./assets/arrow.png"
+          src="./assets/arrow.svg"
           alt="icono de flecha"
           class="icon arrow"
           onclick="location.href='./#projects'"
@@ -261,7 +259,7 @@
           </article>
         </div>
         <img
-          src="./assets/arrow.png"
+          src="./assets/arrow.svg"
           alt="icono de flecha"
           class="icon arrow"
           onclick="location.href='./#experience'"
@@ -278,7 +276,7 @@
               <div class="article-container">
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark.svg"
                     alt="icono de experiencia"
                     class="icon"
                   />
@@ -289,7 +287,7 @@
                 </article>
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark.svg"
                     alt="icono de experiencia"
                     class="icon"
                   />
@@ -300,7 +298,7 @@
                 </article>
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark.svg"
                     alt="icono de experiencia"
                     class="icon"
                   />
@@ -311,7 +309,7 @@
                 </article>
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark.svg"
                     alt="icono de experiencia"
                     class="icon"
                   />
@@ -322,7 +320,7 @@
                 </article>
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark.svg"
                     alt="icono de experiencia"
                     class="icon"
                   />
@@ -333,7 +331,7 @@
                 </article>
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark.svg"
                     alt="icono de experiencia"
                     class="icon"
                   />
@@ -349,7 +347,7 @@
               <div class="article-container">
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark.svg"
                     alt="icono de experiencia"
                     class="icon"
                   />
@@ -360,7 +358,7 @@
                 </article>
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark.svg"
                     alt="icono de experiencia"
                     class="icon"
                   />
@@ -371,7 +369,7 @@
                 </article>
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark.svg"
                     alt="icono de experiencia"
                     class="icon"
                   />
@@ -382,7 +380,7 @@
                 </article>
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark.svg"
                     alt="icono de experiencia"
                     class="icon"
                   />
@@ -393,7 +391,7 @@
                 </article>
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark.svg"
                     alt="icono de experiencia"
                     class="icon"
                   />
@@ -404,7 +402,7 @@
                 </article>
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark.svg"
                     alt="icono de experiencia"
                     class="icon"
                   />
@@ -418,7 +416,7 @@
           </div>
         </div>
         <img
-          src="./assets/arrow.png"
+          src="./assets/arrow.svg"
           alt="icono de flecha"
           class="icon arrow"
           onclick="location.href='./#contact'"
@@ -431,7 +429,7 @@
         <div class="contact-info-upper-container">
           <div class="contact-info-container">
             <img
-              src="./assets/email.png"
+              src="./assets/email.svg"
               alt="icono de email"
               class="icon contact-icon email-icon"
             />
@@ -443,7 +441,7 @@
           </div>
           <div class="contact-info-container">
             <img
-              src="./assets/linkedin.png"
+              src="./assets/linkedin.svg"
               alt="icono de Linkedin"
               class="icon contact-icon"
             />
