--- a/index.html
+++ b/index.html
@@ -11,21 +11,8 @@
   <body>
     <div class="wrapper">
       <nav id="desktop-nav">
-        <div class="logo toggle-dark-mode">
-          <svg
-            class="logo-module--icon--13WJl"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 52 52"
-          >
-            <g class="logo-module--circle-holder--1Ygxy">
-              <path
-                class="logo-module--circle--1sr7A"
-                d="M5.4 26c0-11.4 9.2-20.6 20.6-20.6s20.6 9.2 20.6 20.6c0 11.4-9.2 20.6-20.6 20.6s-20.6-9.2-20.6-20.6zm-5.4 0c0 14.4 11.6 26 26 26s26-11.6 26-26-11.6-26-26-26-26 11.6-26 26z"
-              ></path>
-            </g>
-            <path class="logo-module--i--FY9go" d="M15 22h9v16h-9v-16z"></path>
-            <path class="logo-module--l--3c_ha" d="M28 14h9v24h-9v-24z"></path>
-          </svg>
+        <div class="logo">
+          <img src="./assets/moon-icon.svg" alt="Icono de modo oscuro" class="icon toggle-dark-mode">          
         </div>
         <div>
           <ul class="nav-links">
@@ -38,21 +25,8 @@
       </nav>
 
       <nav id="hamburguer-nav">
-        <div class="logo toggle-dark-mode-2">
-          <svg
-            class="logo-module--icon--13WJl"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 52 52"
-          >
-            <g class="logo-module--circle-holder--1Ygxy">
-              <path
-                class="logo-module--circle--1sr7A"
-                d="M5.4 26c0-11.4 9.2-20.6 20.6-20.6s20.6 9.2 20.6 20.6c0 11.4-9.2 20.6-20.6 20.6s-20.6-9.2-20.6-20.6zm-5.4 0c0 14.4 11.6 26 26 26s26-11.6 26-26-11.6-26-26-26-26 11.6-26 26z"
-              ></path>
-            </g>
-            <path class="logo-module--i--FY9go" d="M15 22h9v16h-9v-16z"></path>
-            <path class="logo-module--l--3c_ha" d="M28 14h9v24h-9v-24z"></path>
-          </svg>
+        <div class="logo">
+          <img src="./assets/moon-icon.svg" alt="Icono de modo oscuro" class="icon toggle-dark-mode">
         </div>
         <div class="hamburguer-menu">
           <div class="hamburguer-icon" onclick="toogleMenu()">
