type of corrected

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               </div>
             </div>
             <div class="project-right">
-              <h3 class="project-title">Electrodomesticos S.A</h3>
+              <h3 class="project-title">Electrodomésticos S.A</h3>
               <div class="project-right-2">
                 <ul class="project-tools">
                   <li class="project-tools__item">JavaScript</li>
